{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 27,
  "lineage": "bc1416b9-933f-6b4b-77ed-904b4c683fe6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "defaultsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:492955515215:subnet/subnet-347cc17e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-347cc17e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492955515215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet1"
            },
            "tags_all": {
              "Name": "Default subnet1"
            },
            "vpc_id": "vpc-ec545294"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "defaultsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:492955515215:subnet/subnet-eb33a393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-eb33a393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492955515215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet2"
            },
            "tags_all": {
              "Name": "Default subnet2"
            },
            "vpc_id": "vpc-ec545294"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:492955515215:vpc/vpc-ec545294",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-87bb25fc",
            "default_route_table_id": "rtb-13789869",
            "default_security_group_id": "sg-de84fee8",
            "dhcp_options_id": "dopt-1667586e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-ec545294",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-13789869",
            "owner_id": "492955515215",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mongoelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:492955515215:loadbalancer/app/mongoelb/326fcfd51ac46c2a",
            "arn_suffix": "app/mongoelb/326fcfd51ac46c2a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mongoelb-317060645.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:492955515215:loadbalancer/app/mongoelb/326fcfd51ac46c2a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mongoelb",
            "security_groups": [
              "sg-de84fee8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-347cc17e"
              },
              {
                "subnet_id": "subnet-eb33a393"
              }
            ],
            "subnets": [
              "subnet-347cc17e",
              "subnet-eb33a393"
            ],
            "tags": {
              "ENV": "DEV",
              "Name": "mongodp"
            },
            "tags_all": {
              "ENV": "DEV",
              "Name": "mongodp"
            },
            "vpc_id": "vpc-ec545294",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_default_subnet.defaultsubnet1",
            "aws_default_subnet.defaultsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mongolistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:492955515215:listener/app/mongoelb/326fcfd51ac46c2a/10cbe04a82cce92c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:492955515215:targetgroup/mongotargetgroup/6adef965a363ffaa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:492955515215:listener/app/mongoelb/326fcfd51ac46c2a/10cbe04a82cce92c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:492955515215:loadbalancer/app/mongoelb/326fcfd51ac46c2a",
            "port": 27017,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.defaultsubnet1",
            "aws_default_subnet.defaultsubnet2",
            "aws_lb.mongoelb",
            "aws_lb_target_group.mongotargetgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mongotargetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:492955515215:targetgroup/mongotargetgroup/6adef965a363ffaa",
            "arn_suffix": "targetgroup/mongotargetgroup/6adef965a363ffaa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "27017",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:492955515215:targetgroup/mongotargetgroup/6adef965a363ffaa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mongotargetgroup",
            "port": 27017,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ENV": "DEV",
              "name": "mongoUItarget"
            },
            "tags_all": {
              "ENV": "DEV",
              "name": "mongoUItarget"
            },
            "target_type": "instance",
            "vpc_id": "vpc-ec545294"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:492955515215:security-group/sg-0382b1c30ea81e908",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0382b1c30ea81e908",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongo security group",
            "name_prefix": "",
            "owner_id": "492955515215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongo security group"
            },
            "tags_all": {
              "Name": "mongo security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-ec545294"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}